# pymangle

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  register.py  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
pymangle/: __init__.py  _mangle.c  cap.c  cap.h  defs.h  mangle.c  mangle.h  mangle.py  pixel.c  pixel.h  point.c  point.h  polygon.c  polygon.h  rand.c  rand.h  stack.c  stack.h  test.py  version.py
tests/: test_import.py  test_pymangle.py
